--- a/index.html
+++ b/index.html
@@ -66,6 +66,56 @@
 
 
 
+
+    </section>
+    <section class="recentnews">
+         <h1>Recent News</h1>
+        <p class="news-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p> 
+        
+        <div class="news-content">
+
+        <div class="news1">
+  
+     <div >
+        <img class="image-1" src="assets/satelite.png" alt="">
+     </div>
+     <div>
+        <h1>Bangladesh Launches New Satellite</h1>
+        <img src="assets/al-jazeera.png" alt="">
+        <p class="newsstart">Date: 05/01/2025    Time: 10.25 PM     </p>
+        <p class="mainnews1">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+            <button class="btn-primary">Read More</button>
+
+     </div>
+     </div>
+    
+     <div class="news2">
+     <div>
+        <img class="image-2" src="assets/satelite.png" alt="">
+
+     </div>
+     <div>
+        <h1>Bangladesh Launches New Satellite</h1>
+        <img src="assets/al-jazeera.png" alt="">
+        <p class="newsstart">Date: 05/01/2025    Time: 10.25 PM     </p>
+        <p class="mainnews1">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+            with a certain degree of justification, be able to speak of humankind as civilized</p>
+            <button class="btn-primary">Read More</button>
+     </div>
+    </div>
+    </div>
+
+
+    </div>
+    <div class="news2"></div>
+
+
+
+
+
+
+
     </section>
 
 
