--- a/index.html
+++ b/index.html
@@ -118,6 +118,40 @@
 
     </section>
 
+    <section class="calltoaction">
+ <div class="section-head">
+    <h1 class="donate-title">Donate Today</h1>
+    <p class="donate-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+ </div>
+ <div class="taka-container">
+<div class="taka-card1">
+<h1 class="100tk">100 Taka</h1>
+</div>
+<div class="taka-card2">
+    <h1 class="200tk">200 Taka</h1>
+    </div>
+    <div class="taka-card3">
+        <h1 class="500tk">500 Taka</h1>
+        </div>
+        <div class="taka-card4">
+            <h1 class="1000tk">1000 Taka</h1>
+            </div>
+ </div>
+ <div class="taka-input">
+ <input type="text" id="tk-input" placeholder="Other amount(Taka)"></br>
+</div>
+ <div class="btn-donate1">
+ <button class="btn-donate">Done Now</button>
+</div>
+
+
+
+
+
+
+
+    </section>
+
 
 
 
