--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
 
 
     </section>
+
+    <section class="quotes">
+    
+<p class="quote">"The developing world is full of entrepreneurs and visionaries, who with access to education, equity and credit would play a key role in developing the economic situations in their countries."</p>
+<h3 class="main-quote">Dr. Muhammad Yunus</h3>
+<p class="designation">Chief Adviser of the People's Republic of Bangladesh</p>
+
+
+
+
+
+
+
+    </section>
     <section class="recentnews">
          <h1>Recent News</h1>
         <p class="news-desc">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p> 
