--- a/index.html
+++ b/index.html
@@ -165,7 +165,17 @@
 
 
     </section>
-
+<section class="newsletter">
+    <div class="newsletter-content">
+    <h1 class="newsletter-title">Subscribe Newsletter</h1>
+    <p class="newsletter-desc">Bangladesh 2.0 aims to redefine the nation’s 
+        trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+    <input type="email" id="email" placeholder="Enter your email here">
+    <button class="btn-donate">Subscribe</button>
+    <p class="newsletter-desc" >We promise not to spam you!</p>
+</div>
+    
+</section>
 
 
 
